# wyc.io

./: .gitignore  CNAME  Makefile  index.html  package.json  wyc.cabal
css/: style.css
guides/: index.html
index_files/: button.css  container.css  divider.css  dropdown.css  grid.css  header.css  icon.css  image.css  list.css  menu.css  reset.css  segment.css  sidebar.css  transition.css
old/: index.html
posts/: 2017-01-15-cms-or-custom-software.md  2017-01-15-should-i-use-a-cms-for-my-software-project.md  2017-01-20-when-not-to-use-a-web-framework.md  2017-02-21-wyc-helps-ibm-patch-security-vulnerability.md  2017-03-14-just-build-it-in-django-or-rails.md  2017-03-15-first-post.md
posts/cms-or-custom-software/: index.html
posts/just-build-it-in-django-or-rails/: index.html
posts/meta/: 2017-01-15-cms-or-custom-software.md  2017-01-20-when-not-to-use-a-web-framework.md  2017-02-21-wyc-helps-ibm-patch-security-vulnerability.md  2017-03-14-just-build-it-in-django-or-rails.md  2017-06-06-secure-platforms-as-a-service.md
posts/secure-platforms-as-a-service/: index.html
posts/should-i-use-a-cms-for-my-software-project/: index.html
posts/when-not-to-use-a-web-framework/: index.html
posts/wyc-helps-ibm-patch-security-vulnerability/: index.html
semantic/src/site/globals/: site.variables
src/: Main.hs
templates/: _contact.html  _floating-nav.html  _footer.html  _nav.html  _subscribe.html  default.html  guides.html  post-list.html  post.html
