name:               wyc
version:            0.1.0.0
build-type:         Simple
Synopsis:           Website of WYC Technology, LLC
Description:        Website of WYC Technology, LLC
Homepage:           https://wyc.io
License:            AllRightsReserved
License-file:       LICENSE
Author:             Wayne Chang
Maintainer:         wayne@wyc.io
Copyright:          (C) 2017 Wayne Chang
Category:           Web
Build-type:         Simple
Extra-source-files: README
cabal-version:      >= 1.10

executable wyc
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers == 0.5.*
                  , filepath == 1.4.*
                  , split == 0.2.*
                  , regex-base == 0.93.*
                  , regex-compat == 0.95.*
                  , regex-posix == 0.95.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
